<resources>
    <string name="app_name">SubmissionIntermediate</string>
    <string name="contentDescIV">Gambar Story</string>
    <string name="txt_info_min">Info min</string>
    <string name="txt_judul">INI JUDUL</string>
    <string name="txt_ini_deskripsi">INI DESKRIPSI</string>
    <string name="txt_tap_to_close">Tap To Close</string>
    <string name="txt_invalid_email">Email tidak valid</string>
    <string name="txt_info">Info Story</string>
    <string name="ttxt_camera">Camera</string>
    <string name="txt_galery">Galery</string>
    <string name="txt_deskripsi_gambar">Deskripsi Gambar</string>
    <string name="txt_upload">Upload</string>
    <string name="txt_add_story">Add Story</string>
    <string name="txt_welcome_back">Welcome Back</string>
    <string name="txt_please_login">Please Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_don_t_have_account">Don\'t have account?</string>
    <string name="txt_register">Register</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_username">Username</string>
    <string name="txt_email">Email</string>
    <string name="txt_already_have_account">Already Have Account?</string>
    <string name="txt_rto">Request Timed Out</string>
    <string name="txt_retry">Retry</string>
    <string name="title_activity_story_maps">StoryMapsActivity</string>
    <string name="txt_add_location">Add Current Location</string>
    <string name="txt_upload_from_gallery">Upload from gallery</string>
</resources>