<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/story_layout" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/txt_add_story"
        android:transitionName="fab"
        app:backgroundTint="@color/neutral_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/teal_700"
        app:srcCompat="@drawable/ic_camera"
        app:tint="@color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_toMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/txt_add_story"
        android:transitionName="fab"
        app:backgroundTint="@color/neutral_700"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/fab_addStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/teal_700"
        app:srcCompat="@drawable/ic_map"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>