<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/story_image"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="photo"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/contentDescIV" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="bottom"
            android:layout_margin="24dp"
            android:id="@+id/fab_showInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="fab"
            android:clickable="true"
            app:srcCompat="@drawable/ic_info"
            android:contentDescription="@string/txt_info" />

        <androidx.cardview.widget.CardView
            android:id="@+id/detailStoryContainer"
            android:visibility="gone"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:elevation="8dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:transitionName="name"
                    android:text="@string/txt_info_min" />
                <TextView
                    android:id="@+id/tv_storyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:transitionName="name"
                    android:text="@string/txt_judul" />

                <TextView
                    android:id="@+id/tv_storyDesc"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    android:transitionName="description"
                    android:text="@string/txt_ini_deskripsi" />

                <TextView
                    android:id="@+id/tvDetailClose"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:layout_marginTop="18dp"
                    android:textStyle="bold"
                    android:transitionName="description"
                    android:text="@string/txt_tap_to_close" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>